results/SpecGenBench/4-shot/log-TransposeMatrix-2023_11_28_02_14_25.txt
public class TransposeMatrix {
 
    //@ requires matrix != null;
    //@ requires (\forall int[] row; row \in matrix; row != null && row.length == matrix[0].length);
    //@ ensures \result != null;
    //@ ensures \result.length == matrix[0].length;
    //@ ensures (\forall int[] row; row \in \result; row.length == matrix.length);
    //@ ensures (\forall int i, j; 0 <= i && i < matrix.length && 0 <= j && j < matrix[0].length; \result[j][i] == matrix[i][j]);
    public int[][] transposeMat(int[][] matrix)
    {
        int m, n, p, q;
        m = matrix.length;
        n = matrix[0].length;
        int[][] transpose = new int[n][m];

        //@ maintaining 0 <= c && c <= n;
        //@ maintaining (\forall int i, j; 0 <= i && i < c && 0 <= j && j < m; transpose[j][i] == matrix[i][j]);
        //@ decreases n - c;
        for (int c = 0; c < n; c++) {

            //@ maintaining 0 <= d && d <= m;
            //@ maintaining (\forall int i, j; 0 <= i && i < c && 0 <= j && j < d; transpose[j][i] == matrix[i][j]);
            //@ decreases m - d;
            for (int d = 0; d < m; d++) {
                transpose[c][d] = matrix[d][c];
            }

        }
        return transpose;
    }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:4: error: This backslash token is unknown: \in
    //@ requires (\forall int[] row; row \in matrix; row != null && row.length == matrix[0].length);
                                         ^
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:4: error: ')' expected
    //@ requires (\forall int[] row; row \in matrix; row != null && row.length == matrix[0].length);
                                                                                                   ^
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:7: error: This backslash token is unknown: \in
    //@ ensures (\forall int[] row; row \in \result; row.length == matrix.length);
                                        ^
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:7: error: ')' expected
    //@ ensures (\forall int[] row; row \in \result; row.length == matrix.length);
                                                                                 ^
4 errors

